i#1726 port to ARM: add pattern-mode udf fault handling
Adds handling of udf faults in pattern mode for both Thumb and ARM.

Adds detection of our instrumentation to ensure we're acting only on our
own udf faults.  Adds switching to the fault's ISA mode prior to any
decoding and for identification of the udf size.

Updates prior opcode defines to be X86-only.  Makes options.repstr_to_loop
and all of the stringop data structures and code X86-only.

Adds a new test free_arm to test -marm.

Review-URL: https://codereview.appspot.com/281400043

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -421,6 +421,10 @@ if (NOT X64)
 newtest(hello hello.c)
 newtest(malloc malloc.c)
 newtest(free free.c)
+if (ARM)
+  newtest_ex(free_arm free.c "" "" "" OFF "free" 0)
+  append_test_compile_flags(free_arm "-marm")
+endif (ARM)
 newtest(badjmp badjmp.c)
 if (NOT ARM) # XXX i#1726: port to ARM
   newtest(registers registers.c)
