i#1847: fix test fuzz_buffer failure with option -fuzz_replace_buffer
- replace mutation_start field in fuzz_state_t with MUTATION_START macro
- update load_fuzz_input() to only increase the buffer size for -fuzz_replace_buffer
- add fuzz_buffer.replace_buffer test
- shrink corpus.2.dat to test how buffer size changes on smaller corpus files

Fixes #1847

Review-URL: https://codereview.appspot.com/287810043

--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -56,6 +56,10 @@ newtest_ex(fuzz_corpus fuzz_corpus.c ""
   "" OFF "../asmtest" 0)
 newtest_ex(fuzz_buffer fuzz_buffer.c
   "initialize" "-fuzz_function;repeatme;-fuzz_num_iters;10" "" OFF "" 0)
+newtest_nobuild_ex(fuzz_buffer.replace_buffer fuzz_buffer
+  "initialize"
+  "-fuzz_function;repeatme;-fuzz_num_iters;10;-fuzz_replace_buffer"
+  "" OFF "fuzz_buffer" 0 "")
 newtest_nobuild_ex(fuzz_buffer.overflow fuzz_buffer
   "initialize;overread"
   "-light;-fuzz_function;repeatme;-fuzz_num_iters;10;-fuzz_replace_buffer"
