--- a/tests/app_suite/CMakeLists.txt
+++ b/tests/app_suite/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2011-2014 Google, Inc.  All rights reserved.
+# Copyright (c) 2011-2016 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -53,6 +53,9 @@ if (UNIX)
   else (APPLE)
     append_compile_flags(app_suite_tests "-DLINUX -DUNIX")
   endif (APPLE)
+  if (ANDROID)
+    append_compile_flags(app_suite_tests "-DANDROID")
+  endif ()
 elseif (WIN32)
   # Work around googletest VS2012 failures by upping _VARIADIC_MAX from 5 (i#1141)
   append_compile_flags(app_suite_tests "-DWIN32 -D_VARIADIC_MAX=10")
